2005-03-30  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/nfs_subr.c (fh_to_mp3): Increased the n of strncpy()
	to make sure it null terminates.

2005-03-29  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/nfs_subr.c (fh_to_mp3): Fix memset bug. In this case
	the memset can be removed because strncpy() should padd the 
	buffer with NULLs anyway.

2005-03-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* include/am_defs.h: Clarify comment.

2005-03-21  Erez Zadok  <ezk@cs.sunysb.edu>

	* include/am_defs.h: undefine "GROUP" so Solaris 10 with gcc-2.96
	won't complain about a conflict for this definition between
	<rpcsvc/nis.h> and <sys/acl.h>.

2005-03-20  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/readdir.c (amfs_readdir_browsable): use %p, not %lx.

	* libamu/mount_fs.c (print_nfs_args): print pointer with %p, not
	%lx.

2005-03-18  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc1					***
	*******************************************************************

2005-03-18  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/transp/transp_tli.c (get_nfs_version): use proper type for
	versout on Solaris (rpcvcers_t).

	* amd/mapc.c (mapc_showtypes): if last map type to print, don't
	append newline or comma to it.

	* libamu/mount_fs.c (print_nfs_args): cast struct netbuf pointer
	to %lx because on Solaris 10 sparc gcc-3.4.3 complains about
	casting it to an int (size is different).

	* configure.in, NEWS: prepare for 6.1-rc1 release.

2005-03-17  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd2ldif.in, ldap.schema: fixes by Adam Morley
	<adam-at-gmi-dot-com> to synchronize what amd2ldif does vs. what
	the ldap.schema expects.

	* amd/map.c (exported_ap_free): We're using a free-list data
	structure and re-using malloc'ed objects.  So, to be safe, memset
	entire structure when it's freed, not just the pointer.
	(umount_exported): bug fix to on-exit code.  Don't run